Improve gradle jvm args & bump deps sha
-Xms1m ensures unused memory can be returned to OS to be used for disk cache or other apps,
SoftMaxHeapSize=1g ensures we don't go above 1gb unless required,
UseStringDeduplication reduces overall memory consumption,
UseZGC reduces latency from GC by a lot giving us sub 1ms STW pauses,
UseCompactObjectHeaders reduces overall memory usage.

All combined makes the build smoother and faster while also leaving more RAM for other apps such as IntelliJ or OS filesystem caches.